Fixed overflow

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,6 +18,7 @@ main {
     color: white;
     text-align: center;
     box-shadow: 0px 0px 10px rgb(45, 45, 45);
+    position: relative;
 }
 
 .card:hover {
@@ -48,6 +49,9 @@ a:hover, a:visited, a:link, a:active
     justify-content: end;
     align-items: center;
     margin-top: 100px;
+    position: absolute;
+    bottom: 10px;
+    right: 0;
 }
 
 .status-color {
